--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/directives/force-focus.js"></script>
     <script src="scripts/directives/select-all.js"></script>
     <script src="scripts/filters/highlight.js"></script>
+    <script src="scripts/index.js"></script>
     <!-- endbuild -->
 
   </body>
