--- a/currency-gh-pages/index.html
+++ b/currency-gh-pages/index.html
@@ -11,9 +11,7 @@
 
     <title>Currency converter</title>
 
-    <!-- build:css(.tmp) styles/stylesheet.min.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="styles/stylesheet.min.css"/>
 
   </head>
   <body ng-controller="currenciesCtrl" ng-init="aside = false" ng-click="hideAside($event)">
@@ -48,20 +46,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular-animate.min.js"></script>
 
-    <!-- build:js scripts/script.min.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/currencies.js"></script>
-    <script src="scripts/directives/currency.js"></script>
-    <script src="scripts/directives/format.js"></script>
-    <script src="scripts/directives/force-focus.js"></script>
-    <script src="scripts/directives/select-all.js"></script>
-    <script src="scripts/filters/highlight.js"></script>
-    <script src="scripts/index.js"></script>
-    <!-- endbuild -->
+    <script src="scripts/script.min.js"></script>
 
   </body>
 </html>
-
-
-
-
