--- a/currency-gh-pages/index.html
+++ b/currency-gh-pages/index.html
@@ -48,5 +48,9 @@
 
     <script src="scripts/script.min.js"></script>
 
+    <!--the twitter widget this is the only code I added-->
+    <a class="twitter-timeline" href="https://twitter.com/currencywatch" data-widget-id="701579130337255424">Tweets by @currencywatch</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
   </body>
 </html>
