--- a/currency-gh-pages/index.html
+++ b/currency-gh-pages/index.html
@@ -51,6 +51,8 @@
     <!--the twitter widget this is the only code I added-->
     <a class="twitter-timeline" href="https://twitter.com/currencywatch" data-widget-id="701579130337255424">Tweets by @currencywatch</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<!--the calculator widget-->
+<iframe width="219" height="302" src="http://www.calculator-1.com/outdoor/?f=0274c8&r=000000" scrolling="no" frameborder="0"></iframe><br /><a href="http://www.calculator-1.com/">Calculator-1.com - The Best Free Online Calculatorн</a>
 
   </body>
 </html>
