--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <meta property="og:image" content="https://raw.githubusercontent.com/pioug/currency/master/preview.png">
-    <meta property="og:title" content="Currency converter">
+    <meta property="og:title" content="Currency Converter">
     <meta property="og:url" content="http://pioug.me/currency/">
     <meta property="og:description" content="A sexy currency converter built with love by @pioug">
     <meta property="og:type" content="website">
